--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
         <java.version>1.8</java.version>
         <fastjson.version>1.2.58</fastjson.version>
         <pagehelper.version>1.2.5</pagehelper.version>
+        <hutool.version>5.0.3</hutool.version>
+        <commons.version>3.8.1</commons.version>
     </properties>
 
     <dependencies>
@@ -40,6 +42,20 @@
             <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>${pagehelper.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>${hutool.version}</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
